--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,11 @@
   },
   "name": "infinitetictactoe",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "npx ts-node index.ts",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
