--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx ts-node index.ts",
+    "start-dev": "nodemon index.ts",
     "build": "npx tsc"
   },
   "author": "",
